--- a/app/views/cats/_form.html.erb
+++ b/app/views/cats/_form.html.erb
@@ -81,7 +81,7 @@
 
     <div class="row">
       <% Cat.stored_attributes[:tests].each do |test| %>
-        <div class="col s6">
+        <div class="col s12 m6">
           <div class="input-field">
             <label class="checkbox-label">
               <%= f.check_box :"#{test}" %>
