Disable compression for sitemap

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0">
     <% unless env_production %>
-      <meta name="turbolinks-visit-control" content="reload">
+      <%# <meta name="turbolinks-visit-control" content="reload"> %>
     <% end %>
 
     <%= favicon_link_tag asset_path('favicon.png') %>
