--- a/app/views/breeds/show.html.erb
+++ b/app/views/breeds/show.html.erb
@@ -13,7 +13,7 @@
   <div class="row">
     <div class="col s12 l6">
       <div class="breed-image">
-        <%= image_tag(@breed.vertical_rectangle, :alt => 'breed-image', class:"z-depth-2") %>
+        <%= image_tag(@breed.vertical_rectangle, alt:"#{@breed.name} breed", class:"z-depth-2") %>
       </div>
     </div>
 
