--- a/app/javascript/stylesheets/modules/home.scss
+++ b/app/javascript/stylesheets/modules/home.scss
@@ -31,6 +31,10 @@
         display: block;
       }
     }
+
+    @include small-and-down {
+      width: 100%;
+    }
   }
 
   .col {
@@ -46,7 +50,7 @@
     font-weight: bold;
 
     @include small-and-down {
-      font-size: 3.9em;
+      font-size: 3.5em;
       margin: 0px;
     }
   }
@@ -78,6 +82,10 @@
     padding-left: 2em !important;
     margin-top: 10%;
   }
+
+  @include small-and-down {
+    width: 100%;
+  }
 }
 
 // Breeds section
@@ -85,6 +93,10 @@
   h1 {
     font-weight: bold;
     text-align: center;
+
+    @include small-and-down {
+      font-size: 3.5em;
+    }
   }
 }
 
