--- a/app/views/cats/_form.html.erb
+++ b/app/views/cats/_form.html.erb
@@ -97,8 +97,13 @@
     <div class="row">
       <div class="col s8 l4">
         <%= link_to cats_new_litter_path, remote: true, class:"btn waves-effect waves-light inner-form-btn", id:"getNewLitterNumber" do %>
-        <%= t('buttons.new_litter') %>
-        <i class="material-icons right">add</i>
+          <span><%= t('buttons.new_litter') %></span>
+          <i class="material-icons right">add</i>
+        <% end %>
+
+        <%= link_to cats_new_litter_path, remote: true, class:"btn waves-effect waves-light inner-form-btn", id:"showExistingLitters" do %>
+          <span><%= t('buttons.existing_litter') %></span>
+          <i class="material-icons right">restore</i>
         <% end %>
       </div>
     </div>
@@ -106,7 +111,6 @@
     <div class="row">
       <div class="col s12 m7">
         <div class="input-field">
-          <%= f.hidden_field :litter_number, id:"hidden_cat_litter_number" %>
           <%= f.select(:litter_number, options_for_select(@litter_numbers, selected: f.object ? f.object.litter_number : ""), {selected: "", disabled: "", prompt: "#{t('cat_info.litter_nr')} *"}, { autocomplete:'off' }) %>
         </div>
         <%= render 'shared/error_messages', object: @cat, field: :litter_number %>
@@ -163,8 +167,8 @@
         <div class="btn">
           <i class="material-icons-outlined">add_photo_alternate</i>
           <span><%= t('words.image') %></span>
-          <%= f.hidden_field :card_picture, value: f.object.card_picture.signed_id if @cat.card_picture.attached? %>
-          <%= f.file_field :card_picture, direct_upload: true, accept: "image/jpeg, image/png" %>
+          <%= f.hidden_field :card_picture, id:"hidden_cat_card_picture", value: f.object.card_picture.signed_id if @cat.card_picture.attached? %>
+          <%= f.file_field :card_picture, direct_upload: true, accept: "image/jpeg, image/png"  %>
         </div>
         <div class="file-path-wrapper">
           <input class="file-path validate" type="text">
@@ -177,8 +181,10 @@
   <div class="row">
     <div class="col s12">
       <div class="card-picture-preview">
-        <% if @cat.new_record? %>
+        <% if @cat.new_record? and !@cat.card_picture.attached? %>
           <span><%= t('words.preview') %> *</span>
+        <% elsif @cat.card_picture.attached? %>
+          <%= image_tag(url_for(ActiveStorage::Blob.find_signed(f.object.card_picture.signed_id))) %>
         <% else %>
           <%= image_tag(@cat.card_picture.variant(resize_to_limit: [300, 300])) if @cat.card_picture.attached? %> 
         <% end %>
@@ -194,8 +200,8 @@
         <div class="btn">
           <i class="material-icons-outlined">add_photo_alternate</i>
           <span><%= t('buttons.other_pictures') %></span>
-          <% f.object.pictures.each do |picture| %>  
-            <%= f.hidden_field :pictures, value: picture.signed_id, multiple: true %>
+          <% f.object.pictures.each_with_index do |picture, index| %>  
+            <%= f.hidden_field :pictures, id:"hidden_cat_card_picture_#{index}", value: picture.signed_id, multiple: true %>
           <% end %>
           <%= f.file_field :pictures, multiple: true, direct_upload: true, accept: "image/jpeg, image/png" %>
         </div>
@@ -209,8 +215,14 @@
   <div class="row">
     <div class="col s12">
       <div class="pictures-preview">
-        <% if @cat.new_record? or @cat.pictures.count == 0 %>
+        <% if (@cat.new_record? or @cat.pictures.count == 0) and !@cat.pictures.attached? %>
           <span><%= t('words.preview') %></span>
+        <% elsif @cat.pictures.attached? %>
+          <% f.object.pictures.each do |picture| %>
+            <div class="image-placeholder">
+              <%= image_tag(url_for(ActiveStorage::Blob.find_signed(picture.signed_id)), class:"thumbnail materialboxed") %>
+            </div>
+          <% end %>
         <% else %>
           <% (0...@cat.pictures.count).each do |picture| %>
             <div class="image-placeholder">
