--- a/app/views/cats/show.html.erb
+++ b/app/views/cats/show.html.erb
@@ -16,7 +16,7 @@
   </div>
   <div class="row">
     <div class="col s12 m6 picture-main-container"> 
-      <%= image_tag(@cat.card_picture, :alt => "main picture", class:"picture-main z-depth-2") %>
+      <%= image_tag(@cat.card_picture, :alt => "#{Breed.find(@cat.breed_id).name} kitten", class:"picture-main z-depth-2") %>
     </div>
     <div class="col s12 m6">
       <div class="info-main">
@@ -122,7 +122,7 @@
           <div class="grid-col grid-col--4"></div>
           <% (0...@cat.pictures.count).each do |picture| %>
             <div class="image-placeholder grid-item">
-              <%= image_tag(@cat.other_pictures(picture), class:"thumbnail materialboxed") %> 
+              <%= image_tag(@cat.other_pictures(picture), alt:"#{Breed.find(@cat.breed_id).name} kitten", class:"thumbnail materialboxed") %> 
             </div>
           <% end %>
         </div>
@@ -135,7 +135,7 @@
       <div class="pictures-parents-container">
         <div class="col s12 m5 offset-m1">
           <div class="picture-parent-container"> 
-            <%= image_tag(cat_father(@cat).square, :alt => "father picture") %>
+            <%= image_tag(cat_father(@cat).square, :alt => "father") %>
           </div>
           <div class="parent-info">
             <h3><%= cat_father(@cat).name %></h3>
@@ -176,7 +176,7 @@
         </div>
         <div class="col s12 m5">
           <div class="picture-parent-container"> 
-            <%= image_tag(cat_mother(@cat).square, :alt => "mother picture") %>
+            <%= image_tag(cat_mother(@cat).square, :alt => "mother") %>
           </div>
           <div class="parent-info">
             <h3><%= cat_mother(@cat).name %></h3>
@@ -229,7 +229,7 @@
             <%= link_to cat_path(cat) do %>
               <div class="card">
                 <div class="card-image">
-                  <%= image_tag(cat.thumbnail, :alt => "card picture") %>
+                  <%= image_tag(cat.thumbnail, :alt => "sibling #{Breed.find(cat.breed_id).name}") %>
                   <% if !cat.name.blank? %>
                     <span class="card-title"><%= cat.name %></span>
                   <% end %>
@@ -257,7 +257,7 @@
                   </div>
                   <div class="info-block">
                     <div class="row">
-                      <div class="col s8 offset-s4">
+                      <div class="col s12">
                         <div class="info-available">
                           <% if cat.is_available %>
                             <i class="material-icons check">check</i>
